# Quill

./: .gitignore  CLAUDE.md  Plan.md  capacitor.config.ts  index.html  minimalist-writing-app-spec.md  package-lock.json  package.json  tailwind.config.cjs  vite.config.ts
.github/workflows/: build-android.yml  build-desktop.yml
files/: USAGE.ts  tableExtension.ts
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src/components/ai/: AIChat.tsx  AISettings.tsx
src/components/editor/: Editor.tsx  Preview.tsx  Toolbar.tsx  autoformat.ts  tableExtension.ts  widgets.ts
src/components/settings/: SettingsPanel.tsx
src/components/sidebar/: Sidebar.tsx
src/layouts/: MainLayout.tsx
src/lib/: storage.ts
src/lib/ai/: providers.ts
src/store/: useAIStore.ts  useDocumentStore.ts
src/types/: ai.ts  document.ts  settings.ts
