[package]
name = "quill"
version = "0.1.0"
description = "Quill — minimalist markdown editor"
authors = []
license = ""
repository = ""
default-run = "quill"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "quill_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "quill"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
